Move YAML parsing and beans to annot.yaml and adapt helpers to instance API
Extract YamlLoader, GenericYamlParser, BeanRegistry and related exceptions into com.predic8.membrane.annot.yaml. Change generated K8sHelperGeneratorAutoGenerated to implement K8sHelperGenerator (instance methods) and update callers (Envelope, BeanDefinition, KubernetesWatcher, tests) to use new instance-based API. Add YAML testing utilities (YamlParser, YAMLParsingTest, StructureAssertionUtil, CompilerHelper.parseYAML) and necessary dependencies (jackson-dataformat-yaml, org.jetbrains annotations). Update imports and tests accordingly.